--- a/css/default.css
+++ b/css/default.css
@@ -42,3 +42,22 @@ text-align: center;
     clear:both;
   }
 }
+
+@media screen and (min-width:1025px){
+  #main{
+    max-width: 1024px;
+    margin: auto;
+  }
+  section{
+    width: calc(70%-20%);
+    float:left;
+  }
+  aside{
+    width:left;
+  }
+  #main:after{
+    content:"";
+  display:block;
+    clear:both;
+  }
+}
